@@ -140,6 +140,51 @@
                     </execution>
                 </executions>
             </plugin>
+
+
+            <!-- Launch4j – Windows launcher exe generálás -->
+            <plugin>
+                <groupId>com.akathist.maven.plugins.launch4j</groupId>
+                <artifactId>launch4j-maven-plugin</artifactId>
+                <version>2.5.0</version>
+                <executions>
+                    <execution>
+                        <id>l4j-windows</id>
+                        <phase>none</phase>
+                        <goals><goal>launch4j</goal></goals>
+                        <configuration>
+                            <headerType>gui</headerType>
+                            <outfile>${project.build.directory}/LabelAnalyzer.exe</outfile>
+                            <jar>${project.build.directory}/app/app.jar</jar>
+                            <errTitle>LabelAnalyzer</errTitle>
+                            <icon>${project.basedir}/src/main/resources/hu/mrflow/labelanalyzer/icon/app.ico</icon>
+                            <classPath>
+                                <mainClass>hu.mrflow.labelanalyzer.MainApp</mainClass>
+                            </classPath>
+                            <jre>
+                                <path>runtime</path>
+                                <bundledJre64Bit>true</bundledJre64Bit>
+                                <opts>
+                                    <opt>--module-path javafx</opt>
+                                    <opt>--add-modules javafx.controls,javafx.fxml</opt>
+                                </opts>
+                            </jre>
+                            <versionInfo>
+                                <fileVersion>1.0.0.0</fileVersion>
+                                <txtFileVersion>1.0.0</txtFileVersion>
+                                <fileDescription>Növényvédő szer engedélyelemző</fileDescription>
+                                <copyright>MrFlow</copyright>
+                                <productVersion>1.0.0.0</productVersion>
+                                <txtProductVersion>1.0.0</txtProductVersion>
+                                <productName>LabelAnalyzer</productName>
+                                <internalName>LabelAnalyzer</internalName>
+                                <originalFilename>LabelAnalyzer.exe</originalFilename>
+                            </versionInfo>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 </project>
